# dobc

./: .gitignore  CMakeLists.txt  README.md
Ghidra/Processors/ARM/data/languages/: ARMTHUMBinstructions.sinc  ARMneon.sinc
Processors/ARM/data/languages/: ARM.sinc  ARMTHUMBinstructions.sinc  ARMneon.sinc
data/: libmakeurl2.4.9.idb  test_native.idb
data/liblazarus/: liblazarus.so.decode
data/vmp/: com.example.test_release_v1.0_4a95377e_enc.apk  dump.dex  libjiagu_a64_dump.i64
data/vmp/360_1/: 111.apk  111_360protect.apk  classes2.dex  libjiagu.i64  libjiagu.idb  libjiagu.so.id0  libjiagu.so.id1  libjiagu.so.id2  libjiagu.so.idb  libjiagu.so.nam  libjiagu.so.til
data/快手/bf8035a0f4c9680a9b53eb225bbe12fd/: libkwsgmain.so.decode
data/斗鱼/edfc5f175821c4605ebb11399953054/: libmakeurl2.4.9.so.decode
docs/: alias analysis.rst  cmd.txt  cp.rst  dobc.docx  index.rst  ollvm.rst  ollvm_douyin.rst
src/dobc/: CMakeLists.txt  block.cc  block.hh  codegen.cc  codegen.hh  cover.cc  cover.hh  dobc.cc  dobc.hh  elf.c  elf.h  elfloadimage.cc  elfloadimage.hh  funcdata.cc  funcdata.hh  high.cc  high.hh  libdobc.c  main.cc  pass.cc  pass.hh  pcodefunc.cc  pcodefunc.hh  pcodeop.cc  pcodeop.hh  thumb_gen.cc  thumb_gen.hh  varnode.cc  varnode.hh  vm.h
src/mcore/: CMakeLists.txt  elf.c  elf.h  file.cpp  file.h  mcore.h  mutil.h  print_util.c  print_util.h
src/sleigh/: CMakeLists.txt  address.hh  copy_sleigh.sh  dobc.cc  globalcontext.cc  heritage.cc  heritage.hh  loadimage.cc  loadimage.hh  opcodes.hh  sleigh.cc  sleigh.hh  slgh_compile.cc  slghparse.cc  slghscan.cc  translate.cc
src/test1/: CMakeLists.txt  binfmt_elf.c  binfmt_elf.h  test.c  test.h  test1.c  test_base64.c  test_base64.h  uc_util.c  uc_util.h
src/unicorn/: CMakeLists.txt  CMakeLists.txt.bak  uc.c
unittests/: CMakeLists.txt  Makefile  README  build.sh  toolchain.mk
unittests/base64/jni/: Android.mk  base64.c  base64.h
unittests/base64/libs/armeabi-v7a/: libbase64.so.decode
unittests/crc32/jni/: Android.mk  crc32.c  crc32.h
unittests/fft/jni/: Android.mk  fft.c  fft.h
unittests/hello/: Makefile  hello.c  test_hello.c
unittests/md4/jni/: Android.mk  md4.c  md4.h
unittests/md5/: Makefile
unittests/md5/jni/: Android.mk  Application.mk  md5.c
unittests/md5/libs/armeabi-v7a/: libmd5.so.decode
unittests/sha1/jni/: Android.mk  Application.mk  sha1.c  sha1.h
unittests/sha1/libs/armeabi-v7a/: libsha1.so.decode
unittests/sha256/jni/: Android.mk
